working on week 1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,30 @@
-<h1>Johnathan Babb</h1>
+<h1>Welcome to CSE Motors</h1>
+<div class="dmc-sale">
+    <div class="dmc-image">
+        <img src="/images/delorean.jpg" alt="DMC-12">
+    </div>
+    <div class="dmc-text">
+        <h2>DMC Delorean</h2>
+        <p>3 Cup holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+        <button>Own Today</button>
+</div>
+<div class="dmc-upgrades">
+<h2>Delorean Upgrades</h2>
+<ul>
+    <li><img src="public\images\upgrades\flux-cap.png">Flux Capacitor</li>
+    <li>Flame Decals</li>
+    <li>Hub Caps</li>
+    <li>Shiny Bumper</li>
+</div>
+<div class="dmc-reviews">
+<h2>DMC Delorean Reviews</h2>
+<ul>
+    <li>"So fast it's almost like traveling in time." (4/5)</li>
+    <li>"Coolest ride on the road." (4/5)</li>
+    <li>"I'm feeling Marty McFly!" (5/5)</li>
+    <li>"The most futuristic ride of our day." (4.5/5)</li>
+    <li>"80's living and I love it!" (5/5)</li>
+</ul>
+</div>
