--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <h1>Welcome to CSE Motors</h1>
 <div class="dmc-sale">
     <div class="dmc-image">
-        <img src="/images/delorean.jpg" alt="DMC-12">
+        <img src="public/images/vehicles/delorean.jpg" alt="DMC-12">
     </div>
     <div class="dmc-text">
         <h2>DMC Delorean</h2>
@@ -13,10 +13,10 @@
 <div class="dmc-upgrades">
 <h2>Delorean Upgrades</h2>
 <ul>
-    <li><img src="public\images\upgrades\flux-cap.png">Flux Capacitor</li>
-    <li>Flame Decals</li>
-    <li>Hub Caps</li>
-    <li>Shiny Bumper</li>
+    <li><img src="public/images/upgrades/flux-cap.png">Flux Capacitor</li>
+    <li><img src="public/images/upgrades/flame.jpg">Flame Decals</li>
+    <li><img src="public/images/upgrades/hub-cap.jpg">Hub Caps</li>
+    <li><img src="public/images/upgrades/bumper_sticker.jpg">Shiny Bumper</li>
 </div>
 <div class="dmc-reviews">
 <h2>DMC Delorean Reviews</h2>
