--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <h1>Welcome to CSE Motors</h1>
 <div class="dmc-sale">
     <div class="dmc-image">
-        <img src="public/images/vehicles/delorean.jpg" alt="DMC-12">
+        <img src="/images/vehicles/delorean.jpg" alt="DMC-12">
     </div>
     <div class="dmc-text">
         <h2>DMC Delorean</h2>
@@ -9,14 +9,16 @@
         <p>Superman doors</p>
         <p>Fuzzy dice!</p>
         <button>Own Today</button>
+    </div>
 </div>
 <div class="dmc-upgrades">
 <h2>Delorean Upgrades</h2>
 <ul>
-    <li><img src="public/images/upgrades/flux-cap.png">Flux Capacitor</li>
-    <li><img src="public/images/upgrades/flame.jpg">Flame Decals</li>
-    <li><img src="public/images/upgrades/hub-cap.jpg">Hub Caps</li>
-    <li><img src="public/images/upgrades/bumper_sticker.jpg">Shiny Bumper</li>
+    <li><img src="/images/upgrades/flux-cap.png">Flux Capacitor</li>
+    <li><img src="/images/upgrades/flame.jpg">Flame Decals</li>
+    <li><img src="/images/upgrades/hub-cap.jpg">Hub Caps</li>
+    <li><img src="/images/upgrades/bumper_sticker.jpg">Shiny Bumper</li>
+</ul>
 </div>
 <div class="dmc-reviews">
 <h2>DMC Delorean Reviews</h2>
