--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,8 +3,10 @@
 <%- include('../partials/head') %>
 <body>
     <div id="wrapper">
+    <img src="/images/site/checkerboard.jpg" alt="checkerboard" id="checkerboard">
     <%- include('../partials/header') %>
-    <%- include('../partials/navigation') %>        <main>
+    <%- include('../partials/navigation') %>   
+         <main>
             <%- body %>
         </main>
     <%- include('../partials/footer') %>
