--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> <%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="/images/site/favicon.ico">
+
 </head>
