--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <header id="top-header">
-    <span class="siteName">
-        <a href="/"><h1>Return to home page</h1></a>
-    </span>
-    <div id="tools">
-        <a title="CLick to log in" href="/account/login">My Account</a>
-    </div>
+  <span class="siteName">
+    <a href="/"><h1>CSE Motors</h1></a>
+  </span>
+  <div id="tools">
+    <a title="Click to log in" href="/account/login">My Account</a>
+  </div>
 </header>
