--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,15 @@
 <h1>Welcome to CSE Motors</h1>
 <div class="dmc-sale">
-    <div class="dmc-text">
-        <h2>DMC Delorean</h2>
-        <p>3 Cup holders</p>
-        <p>Superman doors</p>
-        <p>Fuzzy dice!</p>
-        <button>Own Today</button>
-    </div>
+  <div class="dmc-text">
+    <h2>DMC Delorean</h2>
+    <ul>
+      <li>3 Cup holders</li>
+      <li>Superman doors</li>
+      <li>Fuzzy dice!</li>
+    </ul>
+    <a href="#" class="cta-btn">Own Today</a>
+  </div>
+  <img src="/images/delorean.jpg" alt="DMC Delorean">
 </div>
 <div class="dmc-upgrades">
 <h2>Delorean Upgrades</h2>
