--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     </ul>
     <a href="#" class="cta-btn">Own Today</a>
   </div>
-  <img src="/images/delorean.jpg" alt="DMC Delorean">
+  <img src="/images/vehicles/delorean.jpg" alt="DMC Delorean">
 </div>
 <div class="dmc-upgrades">
 <h2>Delorean Upgrades</h2>
