--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,8 +1,17 @@
 <%- include('../partials/header') %>
 
 <main>
-  <h1><%= title %></h1>
-  <%- detailHTML %>
+  <h1><%= vehicle.inv_make %> <%= vehicle.inv_model %></h1>
+  <div class="vehicle-detail">
+    <img src="<%= vehicle.inv_image %>" alt="Image of <%= vehicle.inv_make %> <%= vehicle.inv_model %>">
+    <div>
+      <p><strong>Year:</strong> <%= vehicle.inv_year %></p>
+      <p><strong>Price:</strong> $<%= vehicle.inv_price.toLocaleString() %></p>
+      <p><strong>Mileage:</strong> <%= vehicle.inv_miles.toLocaleString() %> miles</p>
+      <p><strong>Description:</strong> <%= vehicle.inv_description %></p>
+      <p><strong>Color:</strong> <%= vehicle.inv_color %></p>
+    </div>
+  </div>
 </main>
 
 <%- include('../partials/footer') %>
