fixed emssage bugs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -183,6 +183,15 @@ nav {
   list-style: none;
 }
 
+nav ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 nav li {
   margin-right: 32px;
 }
