--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -20,17 +20,17 @@
       </div>
     <% } %>
     <form action="/account/register" method="post" class="register-form">
-      <label for="first_name">First name</label>
-      <input type="text" id="first_name" name="first_name" required value="<%= typeof first_name !== 'undefined' ? first_name : '' %>">
+      <label for="account_firstname">First name</label>
+      <input type="text" id="account_firstname" name="account_firstname" required value="<%= typeof account_firstname !== 'undefined' ? account_firstname : '' %>">
 
-      <label for="last_name">Last name</label>
-      <input type="text" id="last_name" name="last_name" required value="<%= typeof last_name !== 'undefined' ? last_name : '' %>">
+      <label for="account_lastname">Last name</label>
+      <input type="text" id="account_lastname" name="account_lastname" required value="<%= typeof account_lastname !== 'undefined' ? account_lastname : '' %>">
 
-      <label for="email">Email address</label>
-      <input type="email" id="email" name="email" required value="<%= typeof email !== 'undefined' ? email : '' %>">
+      <label for="account_email">Email address</label>
+      <input type="email" id="account_email" name="account_email" required value="<%= typeof account_email !== 'undefined' ? account_email : '' %>">
 
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" required value="<%= typeof password !== 'undefined' ? password : '' %>">
+      <label for="account_password">Password</label>
+      <input type="password" id="account_password" name="account_password" required value="<%= typeof account_password !== 'undefined' ? account_password : '' %>">
 
       <button type="submit">Register</button>
       <p class="password-hint">
