--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -19,23 +19,38 @@
         <%= flash %>
       </div>
     <% } %>
+    <% if (errors) { %>
+      <ul class="notice">
+        <% errors.array().forEach(error => { %>
+          <li><%= error.msg %></li>
+        <% }) %>
+      </ul>
+    <% } %>
     <form action="/account/register" method="post" class="register-form">
       <label for="account_firstname">First name</label>
-      <input type="text" id="account_firstname" name="account_firstname" required value="<%= typeof account_firstname !== 'undefined' ? account_firstname : '' %>">
+      <input type="text" id="account_firstname" name="account_firstname" required placeholder="Enter your first name" value="<%= typeof account_firstname !== 'undefined' ? account_firstname : '' %>">
 
       <label for="account_lastname">Last name</label>
-      <input type="text" id="account_lastname" name="account_lastname" required value="<%= typeof account_lastname !== 'undefined' ? account_lastname : '' %>">
+      <input type="text" id="account_lastname" name="account_lastname" required placeholder="Enter your last name" value="<%= typeof account_lastname !== 'undefined' ? account_lastname : '' %>">
 
       <label for="account_email">Email address</label>
-      <input type="email" id="account_email" name="account_email" required value="<%= typeof account_email !== 'undefined' ? account_email : '' %>">
+      <input type="email" id="account_email" name="account_email" required placeholder="Enter your email address" value="<%= typeof account_email !== 'undefined' ? account_email : '' %>">
 
       <label for="account_password">Password</label>
-      <input type="password" id="account_password" name="account_password" required value="<%= typeof account_password !== 'undefined' ? account_password : '' %>">
+      <input
+      type="password"
+      id="account_password"
+      name="account_password"
+      required
+      placeholder="Enter your password"
+      pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
+      value="<%= typeof account_password !== 'undefined' ? account_password : '' %>"
+      >
+      <div class="password-requirements">
+        Password must be at least 12 characters, contain a capital letter, a number, and a special character.
+      </div>
 
       <button type="submit">Register</button>
-      <p class="password-hint">
-        Password must be at least 12 characters, contain a capital letter, a number, and a special character.
-      </p>
     </form>
   </div>
 </body>
