--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,6 +1,5 @@
 <%- include("../partials/header") %>
 <main>
-  <h1>Account Management</h1>
   <% if (flash && flash.length > 0) { %>
     <div class="flash-message"><%= flash %></div>
   <% } %>
@@ -11,12 +10,11 @@
       <% }) %>
     </ul>
   <% } %>
-  <p>You're logged in.</p>
-  <h2>Manage Inventory</h2>
-  <p>Choose a classification to see those vehicles:</p>
-  <%- classificationSelect %>
-  <table id="inventoryDisplay"></table>
-  <noscript>JavaScript must be enabled to use this page.</noscript>
-  <script src="../../js/inventory.js"></script>
+  <h2>Welcome <%= locals.accountData.account_firstname %></h2>
+  <a href="/account/update/<%= locals.accountData.account_id %>">Update Account Information</a>
+  <% if (locals.accountData.account_type === "Employee" || locals.accountData.account_type === "Admin") { %>
+    <h3>Inventory Management</h3>
+    <p><a href="/inv/management">Go to Inventory Management</a></p>
+  <% } %>
 </main>
 <%- include("../partials/footer") %>
