--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,23 @@
     <a href="/"><h1>CSE Motors</h1></a>
   </span>
   <div id="tools">
-    <a title="Click to log in" href="/account/login">My Account</a>
+    <nav>
+      <ul>
+        <% if (locals.loggedin) { %>
+          <li>
+            <a href="/account/">
+              Welcome <%= locals.accountData.account_firstname %>
+            </a>
+          </li>
+          <li>
+            <a href="/account/logout">Logout</a>
+          </li>
+        <% } else { %>
+          <li>
+            <a href="/account/login">My Account</a>
+          </li>
+        <% } %>
+      </ul>
+    </nav>
   </div>
 </header>
