--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -8,13 +8,11 @@
       </div>
     <% } %>
 
-    <form action="/account/login" method="post" class="login-form">
-      <label for="email">Email Address:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-
+    <form action="/account/login" method="post">
+      <label for="account_email">Email:</label>
+      <input type="email" id="account_email" name="account_email" required>
+      <label for="account_password">Password:</label>
+      <input type="password" id="account_password" name="account_password" required>
       <button type="submit">Login</button>
     </form>
 
